@@ -22,6 +22,7 @@ Supported platforms
 New user-visible features
 -------------------------
 
+- Simplify output of Times in a specific unit; see Time::As ()
 - Enable selection of high precision int64x64_t implementation
   at configure time, for debugging purposes.
 - A new LTE MAC downlink scheduling algorithm named Channel and QoS
